==============================================================================
    TAME Changelog
    (C) 2018 Matt Tropiano
==============================================================================

0.9BETA11
.........

	- JS interpreter now reads modules from binary serialization.
	- Split NodeJS and NodeJS Module distributions.


0.9BETA10
.........

	- The console shell now has a blurb about save/load states.
	- The NodeJS embedded compiler outputs now have a "--help" runtime mode.
	- Made all output cues lower-case by default.

0.9BETA9
........

	- Fixed Open Actions running target blocks twice in the Java 
	  implementation.
	- Fixed Open Actions causing TypeErrors in the JS implementation.
	- TAMEC can take an arbitrary starting file for the JS compiler, expanding
	  the options for how to bundle a compiled module, but only if you
	  know the directives, which are not documented yet (but you can
	  find them in the source code!).
	- Added queue keyword and removed QUEUEACTION*() functions. Queueing
	  commands now works like this:
	  queue a_generalaction;
	  queue a_modalaction, "mode";
	  queue a_openaction, "opentarget";
	  queue a_transitiveaction, o_object;
	  queue a_transitiveaction : c_container;
	  queue a_transitiveaction : c_container, "tagname";
	  queue a_ditransitiveaction, o_object;
	  queue a_ditransitiveaction : c_container;
	  queue a_ditransitiveaction : c_container, "tagname";
	  queue a_ditransitiveaction, o_object, o_object2;


0.9BETA8
........

	- Fixed Short-Circuit And/Or not casting its final result to a boolean 
	  value.
	- Fixed ditransitive commands (executed as transitive) with one 
	  object threw an NPE in the Java implementation.


0.9BETA7
........

	- Changed TAMELogic.handleAction(...) to TAMELogic.handleCommand(...).
	- Added a message to the HTML-Debug compilation type that notifies the 
	  user about how to trace input commands. 
	- Debug inspector added to JS implementation.
	- Fixed some value stuff.

