@@ -4047,7 +4047,7 @@ public final class TAMEScriptReader implements TAMEConstants
 	 */
 	public static TAMEModule read(String text, TAMEScriptReaderOptions options, TAMEScriptIncluder includer) throws IOException
 	{
-		return read(STREAMNAME_TEXT, new StringReader(text), includer);
+		return read(STREAMNAME_TEXT, new StringReader(text), options, includer);
 	}
 
 	/**
@@ -4105,7 +4105,7 @@ public final class TAMEScriptReader implements TAMEConstants
 	 */
 	public static TAMEModule read(String streamName, String text, TAMEScriptReaderOptions options, TAMEScriptIncluder includer) throws IOException
 	{
-		return read(streamName, new StringReader(text), includer);
+		return read(streamName, new StringReader(text), options, includer);
 	}
 
 	/**
@@ -4200,7 +4200,7 @@ public final class TAMEScriptReader implements TAMEConstants
 	 */
 	public static TAMEModule read(String streamName, InputStream in) throws IOException
 	{
-		return read(streamName, new InputStreamReader(in), DEFAULT_OPTIONS, DEFAULT_INCLUDER);
+		return read(streamName, new InputStreamReader(in, DEFAULT_OPTIONS.getInputCharset()), DEFAULT_OPTIONS, DEFAULT_INCLUDER);
 	}
 
 	/**
@@ -4216,7 +4216,7 @@ public final class TAMEScriptReader implements TAMEConstants
 	 */
 	public static TAMEModule read(String streamName, InputStream in, TAMEScriptIncluder includer) throws IOException
 	{
-		return read(streamName, new InputStreamReader(in), DEFAULT_OPTIONS, includer);
+		return read(streamName, new InputStreamReader(in, DEFAULT_OPTIONS.getInputCharset()), DEFAULT_OPTIONS, includer);
 	}
 
 	/**
@@ -4232,7 +4232,7 @@ public final class TAMEScriptReader implements TAMEConstants
 	 */
 	public static TAMEModule read(String streamName, InputStream in, TAMEScriptReaderOptions options) throws IOException
 	{
-		return read(streamName, new InputStreamReader(in), options, DEFAULT_INCLUDER);
+		return read(streamName, new InputStreamReader(in, options.getInputCharset()), options, DEFAULT_INCLUDER);
 	}
 
 	/**
@@ -4249,54 +4249,7 @@ public final class TAMEScriptReader implements TAMEConstants
 	 */
 	public static TAMEModule read(String streamName, InputStream in, TAMEScriptReaderOptions options, TAMEScriptIncluder includer) throws IOException
 	{
-		return read(streamName, new InputStreamReader(in), options, includer);
-	}
-
-	/**
-	 * Reads TAMEModule objects into a new module from a reader stream.
-	 * @param streamName the name of the stream.
-	 * @param reader the reader to read from.
-	 * @return A new TAMEModule that contains all the read object hierarchy.
-	 * @throws TAMEScriptParseException if one or more parse errors happen.
-	 * @throws IOException if the stream can't be read.
-	 * @throws SecurityException if a read error happens due to OS permissioning.
-	 * @throws NullPointerException if f is null. 
-	 */
-	public static TAMEModule read(String streamName, Reader reader) throws IOException
-	{
-		return read(streamName, reader, DEFAULT_OPTIONS, DEFAULT_INCLUDER);
-	}
-
-	/**
-	 * Reads TAMEModule objects into a new module from a reader stream.
-	 * @param streamName the name of the stream.
-	 * @param reader the reader to read from.
-	 * @param includer the includer to use to resolve "included" paths.
-	 * @return A new TAMEModule that contains all the read object hierarchy.
-	 * @throws TAMEScriptParseException if one or more parse errors happen.
-	 * @throws IOException if the stream can't be read.
-	 * @throws SecurityException if a read error happens due to OS permissioning.
-	 * @throws NullPointerException if file is null. 
-	 */
-	public static TAMEModule read(String streamName, Reader reader, TAMEScriptIncluder includer) throws IOException
-	{
-		return read(streamName, reader, DEFAULT_OPTIONS, includer);
-	}
-
-	/**
-	 * Reads TAMEModule objects into a new module from a reader stream.
-	 * @param streamName the name of the stream.
-	 * @param reader the reader to read from.
-	 * @param options the reader options for compiling.
-	 * @return A new TAMEModule that contains all the read object hierarchy.
-	 * @throws TAMEScriptParseException if one or more parse errors happen.
-	 * @throws IOException if the stream can't be read.
-	 * @throws SecurityException if a read error happens due to OS permissioning.
-	 * @throws NullPointerException if reader is null. 
-	 */
-	public static TAMEModule read(String streamName, Reader reader, TAMEScriptReaderOptions options) throws IOException
-	{
-		return read(streamName, reader, options, DEFAULT_INCLUDER);
+		return read(streamName, new InputStreamReader(in, options.getInputCharset()), options, includer);
 	}
 
 	/**
@@ -4311,7 +4264,7 @@ public final class TAMEScriptReader implements TAMEConstants
 	 * @throws SecurityException if a read error happens due to OS permissioning.
 	 * @throws NullPointerException if reader is null. 
 	 */
-	public static TAMEModule read(String streamName, Reader reader, TAMEScriptReaderOptions options, TAMEScriptIncluder includer) throws IOException
+	private static TAMEModule read(String streamName, Reader reader, TAMEScriptReaderOptions options, TAMEScriptIncluder includer) throws IOException
 	{
 		return (new TSParser(new TSLexer(streamName, reader, includer), options)).readModule();
 	}
